# The-Ledger

./: .env.example  DESIGN.md  DOMAIN_NOTES.md  PHASE_0_1_DETAILED_SUMMARY.md  PHASE_0_1_DETAILED_SUMMARY2.md  README.md  demo_concurrency_test.py  mcp.py  pyproject.toml  requirements.lock.txt  requirements.txt  test_daemon.py  test_server.py  verify_event_store.py
data/: applicant_profiles.json  seed_events.jsonl
datagen/: company_generator.py  event_simulator.py  excel_generator.py  generate_all.py  pdf_generator.py  schema_validator.py
documents/COMP-001/: financial_statements.xlsx  financial_summary.csv
documents/COMP-002/: financial_statements.xlsx  financial_summary.csv
documents/COMP-003/: financial_statements.xlsx  financial_summary.csv
documents/COMP-004/: financial_statements.xlsx  financial_summary.csv
ledger/: event_store.py  upcasters.py
ledger_agents/: compliance_agent.py  decision_orchestrator_agent.py  document_processing_agent.py  fraud_detection_agent.py  week3_extractor.py
scripts/: bootstrap_test_data.py  init_db.py  run_compliance_agent.py  run_daemon.py  run_document_agent.py  run_fraud_agent.py  run_full_pipeline.py  run_orchestrator_agent.py  run_pipeline.py  run_projections_once.py  test_audit_chain.py  test_upcasting.py  test_what_if.py
src/: audit.py  document_extraction.py  event_store.py  schema.sql  what_if.py
tests/: conftest.py  test_audit_chain.py  test_concurrency.py  test_event_store.py  test_gas_town.py  test_mcp_lifecycle.py  test_narratives.py  test_projections.py  test_schema_and_generator.py  test_upcasting.py
(+201 files in other folders)
