# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "the-ledger"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29.0",
    "anthropic>=0.39.0",
    "langgraph>=0.2.76",
    "pydantic>=2.6.0",
    "fastmcp>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
